Fix flickering and patchy ability to click SVG icons in Edge
Resolves #36.

--- a/src/css/Concept.css
+++ b/src/css/Concept.css
@@ -26,6 +26,7 @@
   word-wrap: break-word;
   line-height: 1.2;
   max-height: 3.6rem;
+  min-height: 1.1rem;
 }
 
 .concept .concept-type {
